update ci-vnet, add ct-ssh-no-vnet; both testing and working

--- a/ci-vnet/01.setup-compute.ipynb
+++ b/ci-vnet/01.setup-compute.ipynb
@@ -37,17 +37,8 @@
    "source": [
     "from azureml.core import Workspace\n",
     "\n",
-    "ws = Workspace.from_config('~/code/config.json')\n",
+    "ws = Workspace.from_config()\n",
     "ws"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ws.resource_group"
    ]
   },
   {
@@ -80,7 +71,6 @@
     "\n",
     "compute_config = ComputeInstance.provisioning_configuration(\n",
     "    vm_size='STANDARD_D3_V2',\n",
-    "    ssh_public_access=False,\n",
     "    vnet_resourcegroup_name=ws.resource_group,\n",
     "    vnet_name='dask-vnet',\n",
     "    subnet_name='default',\n",
@@ -98,9 +88,7 @@
    "outputs": [],
    "source": [
     "from azureml.core.compute import ComputeTarget, AmlCompute\n",
-    "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
-    "# Choose a name for your CPU cluster\n",
     "ct_name = 'dask-vnet-ct'\n",
     "\n",
     "compute_config = AmlCompute.provisioning_configuration(vm_size='STANDARD_D2_V2',\n",
