update readme, markdowns

--- a/ci-vnet/01.setup-compute.ipynb
+++ b/ci-vnet/01.setup-compute.ipynb
@@ -42,6 +42,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create vnet\n",
+    "Create an Azure Virtual Network (vnet) in the same resource group as the Azure ML Workspace."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -52,6 +60,14 @@
     "cmd = f'az network vnet create --name dask-vnet --resource-group {ws.resource_group} --subnet-name default'\n",
     "\n",
     "os.system(cmd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Compute Instance in the vnet \n",
+    "Create an Azure ML Compute Instance in the same vnet."
    ]
   },
   {
@@ -80,6 +96,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create Compute Target in the vnet\n",
+    "Create an Azure ML Compute Target in the same vnet. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -101,6 +125,14 @@
     "\n",
     "ct = ComputeTarget.create(ws, ct_name, compute_config)\n",
     "ct.wait_for_completion(show_output=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Open JupyterLab on Compute Instance\n",
+    "Copy and paste the URL below for the JupyterLab session running on the Compute Instance. Clone this repo to the Compute Instance, and move on to run [02.start-cluster.ipynb](02.start-cluster.ipynb)."
    ]
   },
   {
